@@ -29,7 +29,6 @@ enum undo_type_t {
   UNDO_NONE,
   UNDO_DELETE,
   UNDO_BACKSPACE,
-  UNDO_BACKSPACE_WORD,
   UNDO_ADD,
   UNDO_OVERWRITE,
   UNDO_INDENT,
