@@ -1,4 +1,7 @@
 Version 1.0.7:
+	New features:
+	- Ctrl+backspace erases the last word starting from the cursor.
+
 	Bug fixes
 	- Handle errors in getcwd more gracefully (i.e. return / as current working
 	  directory).
